feat: fetch multiple random words
